--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
         <version>3.0.0-M3</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+          <!--   <suiteXmlFile>testng.xml</suiteXmlFile> -->
+            <suiteXmlFile>testng1.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
