Interview page objects created

--- a/src/main/java/resources/data.properties
+++ b/src/main/java/resources/data.properties
@@ -6,3 +6,5 @@ preparerpass = P@ssword1
 devssbpassword = LlZ7glcZvE42cALpjJsJ
 devusername = qatest
 devpassword = P@ssword1
+preparerlogin1 = 000334
+preparerpswd1 = P@ssword1
